# dependency-checker

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  report_footer.html  report_header.html  requirements-test.txt
.github/workflows/: test-python.yml  test.yml
src/: check_local.py  check_remote.py  client.py  helpers.py  main.py
src/managers/: docker.py  package.py  repository.py  runner.py
src/parsers/: docker.py  frozen.py  temp.py  text.py  toml.py
src/reporters/: html.py
tests/: conftest.py  not_test_docker.py  not_test_frozen.py  not_test_main.py  not_test_toml.py  test_client.py  test_docker.py  test_fixtures.py  test_frozen.py  test_html.py  test_main.py  test_package.py  test_packages.py  test_parsers.py  test_repository.py  test_runner.py  test_toml.py
tests/file_fixtures/: docker.txt  pyproject.txt  pyproject_not_modern.txt  requirements.txt
tests/fixtures/files/: requirements-frozen.txt
tests/fixtures/responses/: package.json
tests/fixtures/test_repo/: Dockerfile  pyproject.toml
tests/fixtures/toml/: pyproject_group_dev_deps.toml
tests/test_files/: Dockerfile  DockerfileNoPoetry  pyproject.toml  pyproject_not_modern.toml  requirements.txt  test_client.py
