[project]
name = "dependency-checker"
version = "0.1.0"
description = ""
authors = [
    { name = "Nick Moreton", email = "nickmoreton@me.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "tomli>=2.2.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[project.scripts]
check = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[tool.black]
line-length = 120
include = '\.pyi?$'
