[tool.poetry]
name = "test_repo"
version = "0.1.0"
description = "this is a test repo"
authors = ["tester <tester@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.14" # outdated
wagtail = "3.0.1" # outdated
dj-database-url = "1.3.0" # outdated
wagtail-sharing = {git = "https://github.com/nickmoreton/wagtail-sharing", rev = "support/wagtail42-tokenurls"}
wagtailmenus = "~3.1.7"
wagtailfontawesome = "1.1.0"
gunicorn = { version = "~20.0", optional = true }

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
black = "23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
